--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
     </nav>
 
     <!-- Products -->
-    < id="products">
         <h1 class="display-1 my-4 text-center">PRODUCTS</h1>
     <div class="card-group">
         <div class="card">
@@ -172,20 +171,20 @@
         <div class="col-md-3 text-center">
             <ul class="list-unstyled mb-0">
                 <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                    <p>San Francisco, CA 94126, USA</p>
+                    <p>Cape Town, 7780, RSA</p>
                 </li>
 
                 <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p>+ 01 234 567 89</p>
+                    <p>0677432579</p>
                 </li>
 
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <p>contact@mdbootstrap.com</p>
+                    <p>Reece'sFruitGoMarket@gmail.com</p>
                 </li>
             </ul>
         </div>
-        <!--Grid column-->
 
+        <!--Grid column-->
     </div>
 
 </section>
